# data_mining

./: .gitignore  DataAdquisition.org  DataAdquisition.tex  Intro.org  classification.org  clustering.org  data.py  data_adqisition.py  data_adquisition_estados.py  data_analysis.org  data_extraction_uanl.py  data_mining.org  data_wiki.py  dm_lmv_6.csv  dm_s_8.csv  estados_analysis.py  estados_limpio.csv  forecasting.org  linear_regression.org  pyproject.toml  text_cliud.org  text_cloud.org  text_cloud.py  texto.txt  uanl_analysis.py  uanl_lr.py  word_cloud.py
.auctex-auto/: DataAdquisition.el  data_analysis.el
csv/: analyzed_uanl.csv  df.csv  estados.csv  estados_limpio.csv  paises.csv  sales.csv  uanl_dependencia_mes.csv
data_adquisition/: DataAdquisition.org
data_adquisition/csv/: estados.csv
lists/: S_11.csv
py_files/: data_adquisition_estados.py  data_extraction_uanl.py
